[gd_scene load_steps=11 format=2]

[ext_resource path="res://visuals/fonts/Anton-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/2D_particles.gd" type="Script" id=2]
[ext_resource path="res://visuals/big_buck_bunny_short_out.ogv" type="VideoStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.141355, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 169.2
gravity = Vector3( 0, 98, 0 )
initial_velocity = 140.0
initial_velocity_random = 0.36
angular_velocity = 75.0
angular_velocity_random = 0.47
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 0.68
scale_curve = SubResource( 5 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 100, 100, 1 )
flag_disable_z = true
spread = 169.2
gravity = Vector3( 0, 0, 0 )
initial_velocity = 7.72
initial_velocity_random = 0.36
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Viewport2")

[node name="2DParticles" type="Node2D"]
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 128, 128 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="Label" type="Label" parent="Viewport"]
margin_right = 92.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "HELLO"
align = 1
valign = 1

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 240, 135 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="VideoPlayer" type="VideoPlayer" parent="Viewport2"]
margin_right = 240.0
margin_bottom = 135.0
stream = ExtResource( 3 )
autoplay = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 261, 250 )
amount = 15
lifetime = 2.5
process_material = SubResource( 2 )
texture = SubResource( 3 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 707, 251 )
amount = 3
lifetime = 5.0
process_material = SubResource( 7 )
texture = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="finished" from="Viewport2/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
